--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ rvm:
   - 1.8.7
   - 1.9.2
   - ree
-script: "rake spec"
+script: 
+- bundle exec rspec spec/acceptance
 env:
   - PUPPET_VERSION=2.6.12
   - PUPPET_VERSION=2.7.6
